--- a/src/app.html
+++ b/src/app.html
@@ -2,18 +2,12 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="favicon.ico" />
-
-		<link
-			rel="stylesheet"
-			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
-		/>
-		<!-- Roboto Mono -->
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono" />
-		<!-- SMUI Styles -->
+		<link rel="icon" href="/favicon.ico" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Sveltekit + Electron</title>
 		%sveltekit.head%
 	</head>
 	<body>
-		<div>%sveltekit.body%</div>
+		<div id="svelte">%sveltekit.body%</div>
 	</body>
 </html>
