--- a/src/app.html
+++ b/src/app.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.ico" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
-			crossorigin="anonymous"
-		/>
-		<title>Slippi Ranking</title>
-		%sveltekit.head%
+
+<head>
+	<meta charset="utf-8" />
+	<link rel="icon" href="/favicon.ico" />
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+	<title>Slippi Ranking</title>
+	%sveltekit.head%
 	</head>
-	<body style="margin: 0">
-		<div id="svelte">%sveltekit.body%</div>
-	</body>
+
+<body style="margin: 0">
+	<div id="svelte">%sveltekit.body%</div>
+</body>
+
 </html>
 
 <style>
@@ -59,10 +58,12 @@
 		font-size: 2em;
 		margin: 0;
 	}
+
 	h4 {
 		font-size: 1.7em;
 		margin: 0;
 	}
+
 	h5 {
 		font-size: 1.2em;
 		margin: 0.1em;
@@ -74,5 +75,32 @@
 
 	*::-webkit-scrollbar {
 		display: none;
+	}
+
+	.scrollbox {
+		overflow-x: auto;
+		padding-right: 1em;
+	}
+
+	@supports (scrollbar-color: auto) {
+		.scrollbox {
+			scrollbar-color: #6c757d #ced4da;
+		}
+	}
+
+	@supports selector(::-webkit-scrollbar) {
+		.scrollbox::-webkit-scrollbar {
+			width: 1rem;
+			display: unset;
+		}
+
+		.scrollbox::-webkit-scrollbar-track {
+			background: #ced4da;
+		}
+
+		.scrollbox::-webkit-scrollbar-thumb {
+			background: #6c757d;
+			border-radius: 0.2rem;
+		}
 	}
 </style>
